# ai-task

./: .gitignore  README.md  index.html  package.json  tsconfig.app.json  vite.config.ts
requirements/: 01-ai-chat.md  02-task-management.md  03-execution-logs.md  04-settings.md  README.md
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/database/: flows.rs  mod.rs  schema.rs  settings.rs  state.rs  tasks.rs  utils.rs
src/api/database/: client.ts  flow-repository.ts  index.ts  settings-repository.ts  task-repository.ts  types.ts
src/stores/: task.ts
